# authz-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.githooks/: pre-commit
src/: cache.rs  cel.rs  core_resolver.rs  dispatcher.rs  error.rs  lib.rs  model.pest  model_ast.rs  model_parser.rs  model_validator.rs  policy_provider.rs  resolver.rs  tenant_schema.rs  traits.rs  type_system.rs
